<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Corona Stats
  ~ Copyright (C) 2020, Rahul Kumar Patel <auroraoss.dev@gmail.com>
  ~
  ~ Aurora Store is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~ Corona Stats is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aurora.corona.world.fragment.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.aurora.corona.world.fragment.CountryListFragment"
        android:label="@string/title_country_list"
        tools:layout="@layout/fragment_country_wise" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aurora.corona.world.fragment.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>
