<!--
  ~ Corona Stats
  ~ Copyright (C) 2020, Rahul Kumar Patel <auroraoss.dev@gmail.com>
  ~
  ~ Aurora Store is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~ Corona Stats is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_last_updated"
    android:padding="@dimen/padding_small">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_total" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_total_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="1000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_hospital" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_active_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="819" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_cured" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_recovered_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_cured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="79" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_deaths" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_death_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_critical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_critical_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_critical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_pen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_test_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_all_tests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_file" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_million_cases"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_million_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_file" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_million_deaths"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_million_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_default"
                        android:layout_height="@dimen/icon_size_default"
                        android:tint="?colorAccent"
                        app:srcCompat="@drawable/ic_file" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@string/title_million_tests"
                        android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_million_tests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/icon_size_category"
                    android:textAppearance="@style/TextAppearance.Aurora.Line2"
                    tools:text="19" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>