<!--
  ~ Corona Stats
  ~ Copyright (C) 2020, Rahul Kumar Patel <auroraoss.dev@gmail.com>
  ~
  ~ Aurora Store is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~ Corona Stats is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_title_state"
    android:padding="@dimen/padding_small">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/outline_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_voltage"
        app:layout_constraintEnd_toStartOf="@+id/card_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_total" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_total_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1000" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_temperature"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_hospital" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_active_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="819" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_voltage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/outline_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_critical"
        app:layout_constraintEnd_toStartOf="@+id/card_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_temperature">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_cured" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_recovered_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_cured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="79" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_affected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_voltage"
        app:layout_constraintTop_toBottomOf="@id/card_health">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_deaths" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_death_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="19" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_critical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/outline_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_affected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_voltage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_critical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_critical_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_critical_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="79" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_affected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_critical"
        app:layout_constraintTop_toBottomOf="@id/card_mode">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="?colorAccent"
                app:srcCompat="@drawable/ic_earth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_affected_countries"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_affect_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="19" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>